# sepal_smfm_biota

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  README.rst  no_ui.ipynb  pyproject.toml  requirements.txt  sepal_environment.yml  smfm_biota.ipynb  ui.ipynb
.github/workflows/: ci.yaml
biota/biota/: download.py
component/frontend/: styles.py
component/message/: __init__.py  en.json  es.json
component/message/en/: en.json
component/parameter/: __init__.py  directory.py  file_params.py
component/scripts/: scripts.py
component/tiles/: __init__.py  parameters.py  process.py  tiles.py
component/widget/: __init__.py  custom_map.py  custom_widgets.py
doc/: en.rst
